# gameboy-emulator

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
src/lib/: bus.cpp  bus.h  cart.cpp  cart.h  cpu.cpp  cpu.h  error.cpp  error.h  gameboy.cpp  gameboy.h  interrupts.cpp  interrupts.h  joypad.cpp  joypad.h  mbc.cpp  mbc.h  ppu.cpp  ppu.h  timer.cpp  timer.h  util.cpp  util.h
src/test/: app.cpp  app.h  gui.cpp  gui.h  main.cpp
